force-app/main/default/objects/AccountStatementFilter__c/AccountStatementFilter__c.object-meta.xml
<CustomObject>
    <description>Oggetto tecnico per innesco processi da Estratto Conto</description>
    <label>Filtro Estratto Conto</label>
    <nameField>
        <displayFormat>ASF-{0000}</displayFormat>
        <label>Filtro Estratto Conto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filtri Estratto Conto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>