force-app/main/default/objects/AccountStatementFilter__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Chiave di upsert</description>
    <label>Contesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EC1L</fullName>
            </value>
            <value>
                <fullName>EC2L</fullName>
            </value>
            <value>
                <fullName>InstallmentsView</fullName>
            </value>
            <value>
                <fullName>EC7</fullName>
            </value>
            <value>
                <fullName>Paperless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>