force-app/main/default/objects/AccountStatementFilter__c/fields/DocumentSelected__c.field-meta.xml
<CustomField>
    <fullName>DocumentSelected__c</fullName>
    <label>Documenti Selezionati</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>