force-app/main/default/objects/AccountStatementFilter__c/fields/IsInstallment__c.field-meta.xml
<CustomField>
    <fullName>IsInstallment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rateizzato</label>
    <type>Checkbox</type>
</CustomField>