force-app/main/default/objects/AccountStatementFilter__c/fields/IsInvoice__c.field-meta.xml
<CustomField>
    <fullName>IsInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fattura</label>
    <type>Checkbox</type>
</CustomField>