force-app/main/default/objects/AccountStatementFilter__c/fields/IsPrescribable__c.field-meta.xml
<CustomField>
    <fullName>IsPrescribable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescrivibile</label>
    <type>Checkbox</type>
</CustomField>