force-app/main/default/objects/AccountStatementFilter__c/fields/IsRaiFee__c.field-meta.xml
<CustomField>
    <fullName>IsRaiFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canone RAI</label>
    <type>Checkbox</type>
</CustomField>