force-app/main/default/objects/AccountStatementFilter__c/fields/Multiselect__c.field-meta.xml
<CustomField>
    <fullName>Multiselect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiselezione</label>
    <type>Checkbox</type>
</CustomField>