force-app/main/default/objects/AccountStatementFilter__c/fields/OnCredit__c.field-meta.xml
<CustomField>
    <fullName>OnCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A Credito</label>
    <type>Checkbox</type>
</CustomField>