force-app/main/default/objects/AccountStatementFilter__c/fields/SameCA__c.field-meta.xml
<CustomField>
    <fullName>SameCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stesso CA</label>
    <type>Checkbox</type>
</CustomField>