force-app/main/default/objects/AccountStatementFilter__c/fields/SocialBonus__c.field-meta.xml
<CustomField>
    <fullName>SocialBonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Sociale</label>
    <type>Checkbox</type>
</CustomField>