force-app/main/default/objects/AccountStatementFilter__c/fields/UpsertKey__c.field-meta.xml
<CustomField>
    <fullName>UpsertKey__c</fullName>
    <label>Upsert Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>