force-app/main/default/objects/AccountStatementFilter__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chiave di upsert</description>
    <label>Utente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filtri_Estratto_Conto</relationshipName>
    <type>Lookup</type>
</CustomField>