force-app/main/default/objects/AccountStatementFilter__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Società di vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>